  ChangeLog
  =========

This is a detailed list of ongoing changes.  Add changes to 
the top of this file.

Changes by R. Holmes on 15 Oct 2002
-----------------------------------

In TaPairFromQuad.cc, added a check on pairsynch -- should be first of
pair if first or third of quad, second of pair if second or fourth of
quad.

In TaDataBase.{cc,hh}, added #ifdef DICT/#endif where needed.


Changes by R. Michaels on Oct 21, 2002
--------------------------------------

 Major DataBase Upgrade
	
 * Remove classes: VaDataBase, TaAsciiDB, and TaMysql.
   Replace all that with TaDataBase class.  Mysql interface
   is through a Perl script which is called from TaDataBase.

 * Makefile drops VaDataBase, TaAsciiDB, TaMysql.  Add TaDataBase.

 * main.cc process command line for database over-ride and
   passes this to TaAnalysisManager.
	
 * TaAnalysisManager passes database over-ride command to 
   the TaRun.

 * TaCutList, TaDevice, TaEvent, TaLinkDef.hh, TaRun, VaAnalysis,
   TaPairFromQuad use TaDataBase instead of VaDataBase.  Actually 
   some of these didn't use database but had included the headers.

 * VaAnalysis writes the database to the ROOT file.  (This can
   be retrieved with '-D rootsource file' command line option.)
   VaAnalysis has an 'ifdef' section which illustrates how to
   Put() data into database.  We'll want to delete this eventually
   so as not to confuse anybody.

 * TaFileName: Default location of database files is ./db directory 

 * Variables 'didinit', 'didread', and 'didput' mean just what
   their names imply.  I prefer the error messages as they are,
   and it's safer than silently recovering from all combinations 
   of user mistakes.

 * In ./doc:  Remove DATABASE.RULES and add DATABASE.TXT
	

Changes by R. Holmes on 15 Oct 2002
-----------------------------------

I should've known we were going to want to be able to study
ordering-dependent effects...

Each event now has information about the helicity of the previous