@@ -18,10 +18,16 @@
 # To use "insure" from parasoft.com.  Must first type "use insure" on ifarml1.
 # export INSURE = 1
 #
-# MAKEDICTIONARY=1 is very important.  The ability to turn this off
-# is obsolescent and related to old versions of root.
-# Works fine if root version 3.02/07 or later.  
-MAKEDICTIONARY = 1
+# IMPORTANT: DO NOT UNCOMMENT THE FOLLOWING LINE, unless you are
+# sufficiently expert to understand the consequences.
+# MAKENODICTIONARY should be defined only to ease debugging during Pan
+# development, or to compile with obsolete versions (older than
+# 3.02/07) of ROOT.  Of course it's better to install a current
+# version of ROOT.
+#
+###### DO NOT UNCOMMENT ######
+# MAKENODICTIONARY = 1  
+##############################
 
 # Choose the compiler.
 GCC=g++
@@ -137,8 +143,9 @@ HEAD += DevTypes.hh
 PROGS = pan
 
 # Make the dictionary
-ifdef MAKEDICTIONARY
-  CXXFLAGS += -DDICT
+ifdef MAKENODICTIONARY
+  CXXFLAGS += -DNODICT
+else
   OBJS += TaDict.o
 endif
 
@@ -159,7 +166,7 @@ main.o: main.cc
 
 TaDict.cc: $(OBJS) TaLinkDef.hh
 	@echo "Generating Decoder Dictionary..."
-	$(ROOTSYS)/bin/rootcint -f TaDict.cc -c -p -DDICT $(HEAD) TaLinkDef.hh
+	$(ROOTSYS)/bin/rootcint -f TaDict.cc -c -p $(HEAD) TaLinkDef.hh
 
 # DevTypes generated by Perl script
 
