@@ -23,7 +23,7 @@
 #include "TaString.hh"
 #include "TaLabelledQuantity.hh"
 
-#ifdef DICT
+#ifndef NODICT
 ClassImp(TaADCCalib)
 #endif
 
